支付，提现，商户入驻

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,9 @@
+#平台商户号
+PLATE_NO=88882019090510001115
+#子商户号
+MERCHANT_ID=1005481
+#子用户号
+SUB_USER_NO=88882019091810000027
 #商户支付KEY
 payKey=5125c70751694afabda4c0e1ab6fb972
 
@@ -6,9 +12,16 @@ paySecret=1d256896b62748f8a4cfcba3efbe8daf
 
 #支付请求
 PAY_URL=http://192.168.1.29:8081/unionPay/initPay
+#提现请求
+WITHDRAW_URL=http://192.168.1.29:8081/unionPay/withdraw
+#商户入驻请求
+MERCHANT_IMP_URL=http://192.168.1.29:8081/unionPay/merchant/add
+MERCHANT_QUERY_DETAIL_URL=http://192.168.1.6:8080/unionPay/merchant/detail
 
 #支付结果后台通知地址
-notifyUrl=http://192.168.1.6:8088/pay/notice
+notifyPayUrl=http://192.168.1.6:8088/pay/notice
+#提现结果后台通知地址
+notifyWithdrawUrl=http://192.168.1.6:8088/withdraw/notice
 
 #支付结果页面通知地址
 returnUrl=http://office.ecpss.com/pay/view
