信用卡支付测试流程

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,7 +11,7 @@ payKey=5125c70751694afabda4c0e1ab6fb972
 paySecret=1d256896b62748f8a4cfcba3efbe8daf
 
 #支付请求
-PAY_URL=http://192.168.1.29:8081/unionPay/initPay
+PAY_URL=http://gateapi.weservicetech.com/unionPay/initPay
 #提现请求
 WITHDRAW_URL=http://192.168.1.29:8081/unionPay/withdraw
 #商户入驻请求
@@ -19,7 +19,7 @@ MERCHANT_IMP_URL=http://192.168.1.29:8081/unionPay/merchant/add
 MERCHANT_QUERY_DETAIL_URL=http://192.168.1.6:8080/unionPay/merchant/detail
 
 #支付结果后台通知地址
-notifyPayUrl=http://192.168.1.6:8088/pay/notice
+notifyPayUrl=http://office.ecpss.com/pay/notice
 #提现结果后台通知地址
 notifyWithdrawUrl=http://192.168.1.6:8088/withdraw/notice
 
